# invest-research-agent

./: .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  RULES.md  TODOS.md  pyproject.toml  resources.example.yaml
.claude/agents/: research-answer-synthesizer.md  transcript-analyst.md
.codex/: config.toml
.codex/agents/: research-answer-synthesizer.toml  transcript-analyst.toml
.cursor/: mcp.json
.cursor/commands/: resources-add.md
.gemini/: settings.json
.gemini/agents/: transcript-analyst.md
.gemini/skills/: notebooklm-skill
analysis/2026-03-30/: investorstw_美伊衝突，油價破百，你手裡的幣到底是避險天堂還是數字陷阱？.analysis.json
analysis/2026-04-05/: brainbrocrypto_加密貨幣正在超車傳統金融體系｜幣圈週報.analysis.json
config/: mcporter.json
docs/: pre-required.md  runtime-config-comparison.md
docs/mcp-config/: claude.md  cursor.md  gemini.md  mcporter.md
references/claude-code/: subagents.md
references/gemini-cli/: custom-commands.md  subagents.md
scripts/: load_scripts.py
src/info_collector/: __init__.py  __main__.py  audio_downloader.py  cli.py  dedupe.py  mcp_client.py  models.py  (+6 more)
tests/: test_analysis_artifacts.py  test_audio_downloader.py  test_cli.py  test_dedupe.py  test_mcp_client.py  test_note_generator.py  test_note_parser.py  test_notebooklm_enricher.py  test_opportunity_routing.py  test_orchestrator.py  test_prediction_market_analyzer.py  test_research_answers.py  test_research_artifacts.py  test_research_pipeline.py  test_state_store.py  test_stt.py  test_topic_router.py  test_transcript_artifacts.py  test_video_fetcher.py
(+43 files in other folders)
