[project]
name = "invest-research-agent"
version = "0.1.0"
description = "Topic-driven investment research agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "yt-dlp",
    "imageio-ffmpeg>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
invest-research-agent = "invest_research_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invest_research_agent"]

[tool.hatch.build]
packages = ["src/invest_research_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
